fix - collapse menu back

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -36,7 +36,7 @@ body {
 }
 
 .header-navbar {
-  height: 3.8em;
+  min-height: 3.8em;
 }
 
 footer.footer {
